--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.5",
     "pdf-lib": "^1.17.1",
